tests/Checker/everything/errors/13c.vc
float a[] = { "test" };

int main() { return 1; }
